css/style.css
:root, *, *:before, *:after {
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
}
@font-face {
  font-family: "Domain Serif";
  src: url("./fonts/DomainSerif-Regular.eot?iefix") format("embedded-opentype"),
       url("./fonts/DomainSerif-Regular.woff2") format("woff2"),
       url("./fonts/DomainSerif-Regular.woff") format("woff"),
       url("./fonts/DomainSerif-Regular.tff") format("truetype"),
       url("./fonts/DomainSerif-Regular.otf") format("opentype"),
       url("./fonts/DomainSerif-Regular.svg#svgFontName") format("svg");
}
@font-face {
  font-family: "Cormorant Garamond";
  src: url("./fonts/CormorantGaramond-Regular.eot?iefix") format("embedded-opentype"),
       url("./fonts/CormorantGaramond-Regular.woff2") format("woff2"),
       url("./fonts/CormorantGaramond-Regular.woff") format("woff"),
       url("./fonts/CormorantGaramond-Regular.ttf") format("truetype"),
       url("./fonts/CormorantGaramond-Regular.svg#svgFontName") format("svg");
}
#harpburger {
  height:135px;
  right:0;
  top:0;
  width:155px;
}
body, main, header, .flex-item, .youtube_container {
  position: relative;
}
h2, h5, footer, #harpburger {
  position: absolute;
}
html, body, h1, main > header > * {
  margin: 0;
}
h2, header > svg, main > header, .back_to_top > a > svg, .picture_nav, .quote img {
  margin: 0 auto;
}
article, aside > ul, aside > p, .quote {
  margin: 2rem auto;
}
h5, h6 {
  margin: 0 1rem;
}
h5, ul {
  padding: 0;
}
.back_to_top > a > svg, .flex-item img, .quote img, .youtube_container {
  display: block;
}
main, .flex-container {
  display: flex;
  flex-flow: row wrap;
}
html {
  background-color: rgb(241,241,241);
  color: rgb(14,14,14);
  font-family: "Cormorant Garamond", serif;
  font-size: 16px;
	overflow-x: hidden;
}
body {
  font-size: 100%;
  min-height: 100vh;
	overflow-x: hidden;
  text-align: center;
}
header > svg {
  width: 100%;
}
footer {
  bottom: 0;
  left: 0;
  width: 100%;
}
footer > svg {
  width: 100%;
}
main {
  padding-bottom: 100px;
}
main > header {
  padding: 2em;
}
.back_to_top {
  cursor: pointer;
  margin: 4em auto;
  flex: 1 100%;
  order: 7;
}
.back_to_top > a > svg {
  max-width: 7rem;
  width: 80%;
}
.back_to_top:hover > a > svg {
  animation: backtop 1.5s linear infinite;
}
nav > ul {
  font-size: 1.5rem;
  margin: 1em;
  text-align: left;
}
nav > ul > li {
  cursor: pointer;
}
p {
  margin: 1rem auto;
  max-width: 34rem;
  padding: 0 1em;
}
a {
  color: inherit;
  text-decoration: none;
}
h1 {
  display: inline-block;
  font-size: 4rem;
  font-style: italic;
  font-weight: 400;
  text-align: center;
  width: 100%;
}
h2 {
  display: inline-block;
  position: initial;
  font-size: 2rem;
  font-weight: 200;
  text-transform: uppercase;
  width: 100%;
}
h3 {
  font-size: 1.5rem;
  font-weight: 200;
  margin: 1rem 0;
}
h5 {
  float: left;
  font-size: 1.3rem;
  font-weight: 500;
  left: 0;
  text-transform: uppercase;
  top: calc(100% * 2/3);
}
h6 {
  font-size: .8rem;
}
ul {
  list-style-type: none;
  margin: 1rem auto;
}
figcaption {
  font-family: "Domain Serif", serif;
  font-size: 100%;
}
.flex-item {
  margin: 1%;
  width: 98%;
}
.flex-agenda {
  margin: 1%;
  width: 98%;
}
.flex-agenda figcaption {
  text-align: left;
}
.flex-agenda figcaption > p {
  padding: 0;
  margin: 0;
}
.flex-agenda figcaption a {
  text-decoration: underline;
}
.flex-item img, .flex-agenda img {
  width: 100%;
}
.seperator {
  width: 100%;
}
.seperator > img {
  height: 6rem;
}
.navigation {
  font-size: 1.5rem;
  margin: 1em;
  text-align: left;
}
.navigation > li {
  cursor: pointer;
}
.intro {
  background-image: url('../img/IVDE_Homepage_768.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.picture_nav {
  max-width: 1440px;
  padding: 0 1%;
}
.picture_nav > div > div {
  background-color: transparent;
  cursor: pointer;
}
article {
  flex: 1 100%;
  max-width: 34rem;
}
aside {
  flex: 1 100%;
  margin: 2em 1em;
}
/* W3 recommendation for invisible content */
/* Still readable by screenreaders */
.invisible {
  border:0 !important;
  clip: rect(1px, 1px, 1px, 1px);
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  height: 1px !important; 
  overflow: hidden;
  padding:0 !important;
  position: absolute !important;
  width: 1px !important; 
}
.flavor {
  font-size: 1.5rem;
}
.quote {
  cursor: pointer;
  font-size: 1.5rem;
  max-width: 24rem;
  padding: 0 1em;
  text-align: center;
}
.quote svg {
  height: .7em;
  margin-top: .8em;
  width: .7em;
}
.logo {
  border-bottom: 1px solid black;
  height: 2rem;
}
.text {
  font-family: "Domain Serif", serif;
  text-align: left;
}
.copyright {
  text-align: right;
}
.youtube_container {
  background-color: transparent;
  border-radius: 5px;
  margin: 0 auto;
  padding-top: 50.65%;
}
.st_black {
  stroke: rgb(35,31,32);
  stroke-width: 1;
}
.st_white {
  stroke: rgb(241,241,241);
  stroke-width: 1;
}
.st_blue {
  stroke: rgb(53,79,162);
  stroke-width: 1;
}
.st_red {
  stroke: rgb(237,28,36);
  stroke-width: 1;
}
@keyframes backtop {
  0% {
    transform: rotateY(0deg);
  }
  100% {
    transform: rotateY(360deg);
  }
}
/* Ipad or greater format */
@media only screen and (min-width: 768px) {
  body {
    padding-bottom: 130px;
  }
  aside {
    font-size: 0.8rem;
    flex: 1 0;
  }
  aside.left {
    order: 1;
  }
  article {
    flex: 3 1 0;
    order: 2;
  }
  aside.right {
    order: 3;
  }
  .quote {
    text-align: left;
    padding-right: 0;
    padding-left: auto;
  }
  .quote img {
    margin: 0;
  }
  .flex-item {
    width: 48%;
  }
  .intro {
    background-image: url('../img/IVDE_Homepage_1200.jpg');
  }
}
/* medium desktop or greater format */
@media only screen and (min-width: 992px) {
  html {
    font-size: 18px;
  }
}
/* large desktops */
@media only screen and (min-width: 1200px) {
  .flex-item {
    width: 31%;
  }
  .flex-agenda {
    width: 48%;
  }
  .seperator:nth-child(4n+2) {
    display: none;
  }
  html {
    font-size: 20px;
  }
  .intro {
    background-image: url('../img/IVDE_Homepage_2560.jpg');
  }
}

